# avvoenv

./: .gitignore  Cargo.toml  Dockerfile  Gemfile  LICENSE  README.md  Rakefile  avvoenv.1  avvoenv.1.ronn  install.sh  package
src/: client_error.rs  consul.rs  env.rs  format.rs  main.rs  prompt.rs  rancher_metadata.rs  service.rs  vault.rs
src/avvoenv/: env.rs  errors.rs  mod.rs  rancher_metadata.rs
src/avvoenv/commands/: command.rs  default.rs  exec.rs  helpers.rs  mod.rs  plugin.rs  service.rs  write.rs
src/avvoenv/source/: consul.rs  mod.rs  source.rs  vault.rs  version.rs
