[package]
name = "avvoenv"
version = "2.1.0"
authors = ["Avvo Infrastructure Team <infrastructure@avvo.com>"]
edition = "2018"
license = "MIT"

[profile.release]
lto = true
codegen-units = 1
incremental = false
opt-level = "z"

[dependencies]
dirs = "1"
glob = "0.3"
log = "0.4"
reqwest = "0.9"
rpassword = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
shell-escape = "0.1"
stderrlog = "0.4"
structopt = "0.2"
