[package]
name = "avvoenv"
version = "2.2.0"
authors = ["Avvo Infrastructure Team <infrastructure@avvo.com>"]
edition = "2018"
license = "MIT"

[profile.release]
lto = true
codegen-units = 1
incremental = false
opt-level = "z"

[dependencies]
dirs = "2"
glob = "0.3"
log = "0.4"
reqwest = { version = "0.10", features = ["blocking", "json"] }
rpassword = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
shell-escape = "0.1"
stderrlog = "0.4"
structopt = { version = "0.3", default-features = false }
url = "2"
